[metadata]
name = devstack-helpers
version = 0.1

[wheel]
universal = 1

[files]
packages =
scripts =
    ds-amphora-certs
    ds-amphora-cleanup
    ds-amphora-failover
    ds-amphora-get-network-config
    ds-amphora-image-update
    ds-amphora-log
    ds-amphora-ssh
    ds-amphora-sync
    ds-amphora-wait-state
    ds-logger
    ds-network-cleanup
    ds-octavia-certs-update
    ds-octavia-dashboard-sync
    ds-octavia-log
    ds-octavia-sync
    ds-octavia-tempest-sync
    ds-os-log-errors
    ds-pretty-log
    ds-sg-list
    ds-tcpdump
    ds-tobiko-sync
    ds-taskflow-sync
    neutronctl.py
    nns
    octavia-resource-list
    octavia-watch
    of-diff
